--- a/src/renderer/styles/admin.less
+++ b/src/renderer/styles/admin.less
@@ -2,4 +2,11 @@
 #admin {
   background:#fff;
   height: 100%;
+  padding: 30px;
+}
+
+#admin .tab-pane {
+  border-left: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
 }
