add json editor - rough in ability to edit the page flow

--- a/src/renderer/styles/admin.less
+++ b/src/renderer/styles/admin.less
@@ -1,8 +1,9 @@
 
-#admin {
-  background:#fff;
+
+#adminShown{
+  padding: 15px;
   height: 100%;
-  padding: 30px;
+  background:#fff;
 }
 
 #admin .tab-pane {
