--- a/src/renderer/styles/main.less
+++ b/src/renderer/styles/main.less
@@ -1,11 +1,20 @@
 
 @import "~bootstrap/dist/css/bootstrap.css";
 
-@color: #ccc;
+@color: #f7f7f7;
+
+html{
+  height: 100%;
+}
 
 body{
   font-size: 0.9em;
   background: @color;
+  height: 100%;
+}
+
+#app{
+  height:100%;
 }
 
 
