--- a/src/renderer/styles/admin.less
+++ b/src/renderer/styles/admin.less
@@ -1,8 +1,17 @@
 
+#admin{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  // width:100%;
+  // height: 100%;
+  overflow: auto;
+}
 
 #adminShown{
   padding: 15px;
   height: 100%;
+  width:100%;
   background:#fff;
 }
 
