--- a/src/renderer/styles/main.less
+++ b/src/renderer/styles/main.less
@@ -5,6 +5,7 @@
 
 html{
   height: 100%;
+  overflow:hidden;
 }
 
 body{
@@ -15,6 +16,7 @@ body{
 
 #app{
   height:100%;
+  overflow:hidden;
 }
 
 
