--- a/src/renderer/styles/main.less
+++ b/src/renderer/styles/main.less
@@ -155,7 +155,7 @@ body{
   height: 10%;
   min-height: 1em;
   background: #fff linear-gradient(45deg, rgba(189,220,232, 0.4), white);
-  flex-grow: 1; // tak up all remaining space besides title
+  flex-grow: 1; // take up all remaining space besides title
   margin:0;
   padding:10px 0px;
 
@@ -171,11 +171,57 @@ body{
 
 // finally, this holds actual content (inside pageContent)
 .pageWrap .pageBlock{
-  background:f7f7f7;
   padding: 5px 15px;
   text-align: left;
+  overflow: scroll;
 }
 
 .pageWrap .pageBlockMulti{
   border-left: 1px solid #ccc;
+}
+
+// for mmd
+.textBlock .textBlockWrap{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  // vw should grow/shrink the font-size according to avialble size.
+  font-size: 1.4vmax;
+  line-height: 1.6vmax;
+}
+.textBlock .textBlockWrap h1{font-size:3.0vmax;}
+.textBlock .textBlockWrap h2{font-size:2.7vmax;}
+.textBlock .textBlockWrap h3{font-size:2.4vmax;}
+.textBlock .textBlockWrap ul{margin-bottom: 1.5vmax;}
+.textBlock .textBlockWrap p{margin-bottom: 1.5vmax;}
+
+
+#slideshow.debug .textBlock .textBlockWrap{
+  font-size: 1.3vw;
+  line-height: 1.4vw;
+}
+.textBlock .textBlockWrap h1{font-size:2.3vw}
+.textBlock .textBlockWrap h2{font-size:2.0vw}
+.textBlock .textBlockWrap h3{font-size:1.7vw}
+.textBlock .textBlockWrap ul{margin-bottom: 0.8vmax; padding-left: 2vmax;}
+.textBlock .textBlockWrap p{margin-bottom: 0.8vmax;}
+
+
+
+
+//for images
+.imageBlock {
+  text-align: center !important;
+}
+.imageBlock img{
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+//for components
+.componentBlock{
+
 }
