--- a/src/renderer/styles/print.less
+++ b/src/renderer/styles/print.less
@@ -59,6 +59,10 @@
     height: 100%;
   }
 
+  #slideshow .printIconWrap{
+    display: none;
+  }
+
   .pageWrap{
     page-break-before: always;
     height:100%;
