Getting one component to work (vue)

--- a/src/renderer/styles/main.less
+++ b/src/renderer/styles/main.less
@@ -296,6 +296,9 @@
 
   //for components
   .componentBlock{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
+ 
 }
